--- a/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_black.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_black.xml
@@ -83,7 +83,7 @@
                     app:layout_textSizePercent="45%h" />
             </com.zhy.android.percent.support.PercentLinearLayout>
 
-            <FrameLayout
+            <com.zhy.android.percent.support.PercentFrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="28">
@@ -126,11 +126,15 @@
 
                 <ImageView
                     android:id="@+id/iv_naving"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
                     android:contentDescription="@string/app_name"
-                    android:visibility="gone" />
-            </FrameLayout>
+                    android:scaleType="centerInside"
+                    android:visibility="gone"
+                    app:layout_heightPercent="60%h"
+                    app:layout_widthPercent="60%w" />
+            </com.zhy.android.percent.support.PercentFrameLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
