--- a/mobile/src/main/res/layout/content_l_dock.xml
+++ b/mobile/src/main/res/layout/content_l_dock.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#11000000"
-    android:paddingTop="2dp">
+    android:orientation="vertical">
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_dock1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
@@ -36,8 +36,8 @@
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_dock2"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
@@ -64,8 +64,8 @@
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_dock3"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
@@ -92,8 +92,8 @@
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_dock4"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
@@ -118,40 +118,10 @@
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
 
-
-    <com.zhy.android.percent.support.PercentLinearLayout
-        android:id="@+id/ll_dock5"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/iv_dock5"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:contentDescription="@string/iv_main_dock_icon"
-            android:gravity="center"
-            android:src="@mipmap/ic_add_app"
-            app:layout_heightPercent="70%h"
-            app:layout_widthPercent="70%h" />
-
-        <TextView
-            android:id="@+id/tv_dock5"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:text="添加"
-            android:textColor="@color/launch_text_color"
-            app:layout_heightPercent="25%h"
-            app:layout_textSizePercent="15%h" />
-    </com.zhy.android.percent.support.PercentLinearLayout>
-
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_all_apps"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
@@ -174,4 +144,4 @@
             app:layout_heightPercent="25%h"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
-</com.zhy.android.percent.support.PercentLinearLayout>
+</LinearLayout>
