--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -1,118 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_l_music"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:ellipsize="marquee"
-        android:gravity="center"
-        android:paddingEnd="5dp"
-        android:paddingStart="5dp"
-        android:singleLine="true"
-        android:text="音乐"
-        android:textColor="@android:color/white"
-        app:layout_heightPercent="12%h"
-        app:layout_marginTopPercent="3%h"
-        app:layout_textSizePercent="7%h" />
-
-    <com.zhy.android.percent.support.PercentRelativeLayout
-        android:id="@+id/rl_cd"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_heightPercent="55%h"
-        app:layout_widthPercent="55%h">
-
-        <ImageView
-            android:id="@+id/music_iv_cover"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerInParent="true"
-            android:layout_weight="1"
-            android:contentDescription="@string/app_name"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/l_music_cd"
-            app:layout_heightPercent="66%h"
-            app:layout_widthPercent="66%h" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:contentDescription="@string/app_name"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/l_music_pointer"
-            app:layout_heightPercent="11%h"
-            app:layout_marginTopPercent="60%h"
-            app:layout_widthPercent="35%h" />
-    </com.zhy.android.percent.support.PercentRelativeLayout>
-
+    tools:ignore="HardcodedText,RtlHardcoded">
 
     <com.zhy.android.percent.support.PercentLinearLayout
-        android:id="@+id/ll_controller"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_heightPercent="20%h">
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:weightSum="40"
+        app:layout_marginPercent="2%h">
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="right|center_vertical">
+        <com.zhy.android.percent.support.PercentFrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5">
 
-            <ImageView
-                android:id="@+id/ll_prew"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:clickable="true"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_prev"
-                app:layout_heightPercent="85%w"
-                app:layout_widthPercent="85%w" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|left"
+                android:lines="1"
+                android:text="音乐"
+                app:layout_textSizePercent="40%h" />
+        </com.zhy.android.percent.support.PercentFrameLayout>
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:gravity="center">
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:ellipsize="marquee"
+            android:gravity="center"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:singleLine="true"
+            android:text="音乐"
+            android:textColor="@android:color/white"
+            app:layout_heightPercent="12%h"
+            app:layout_marginTopPercent="3%h"
+            app:layout_textSizePercent="7%h" />
 
-            <ImageView
-                android:id="@+id/iv_play"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:clickable="true"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_play"
-                app:layout_heightPercent="65%w"
-                app:layout_widthPercent="65%w" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
-
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="left|center_vertical">
+        <com.zhy.android.percent.support.PercentRelativeLayout
+            android:id="@+id/rl_cd"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_heightPercent="55%h"
+            app:layout_widthPercent="55%h">
 
             <ImageView
-                android:id="@+id/ll_next"
+                android:id="@+id/music_iv_cover"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:clickable="true"
+                android:layout_centerInParent="true"
+                android:layout_weight="1"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_next"
-                app:layout_heightPercent="85%w"
-                app:layout_widthPercent="85%w" />
+                android:src="@mipmap/l_music_cd"
+                app:layout_heightPercent="66%h"
+                app:layout_widthPercent="66%h" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/app_name"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/l_music_pointer"
+                app:layout_heightPercent="11%h"
+                app:layout_marginTopPercent="60%h"
+                app:layout_widthPercent="35%h" />
+        </com.zhy.android.percent.support.PercentRelativeLayout>
+
+
+        <com.zhy.android.percent.support.PercentLinearLayout
+            android:id="@+id/ll_controller"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_heightPercent="20%h">
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="right|center_vertical">
+
+                <ImageView
+                    android:id="@+id/ll_prew"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:clickable="true"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_prev"
+                    app:layout_heightPercent="85%w"
+                    app:layout_widthPercent="85%w" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/iv_play"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:clickable="true"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_play"
+                    app:layout_heightPercent="65%w"
+                    app:layout_widthPercent="65%w" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="left|center_vertical">
+
+                <ImageView
+                    android:id="@+id/ll_next"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:clickable="true"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_next"
+                    app:layout_heightPercent="85%w"
+                    app:layout_widthPercent="85%w" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
         </com.zhy.android.percent.support.PercentLinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
-</com.zhy.android.percent.support.PercentLinearLayout>
+</com.zhy.android.percent.support.PercentFrameLayout>
